src/test/deca/context/invalid/classmethode9.deca
class A{
    int a;
    int methode(){
        return a;
    }
}

{
    A a=new A();
    int b=methode();
    
}